--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -1,13 +1,139 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9b7b7b0a-548b-4fea-a551-0550b242196d",
+   "metadata": {},
+   "source": [
+    "## Reading In Files"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e3715f2b-aac6-4c74-b55a-874b79f4e2de",
+   "execution_count": 5,
+   "id": "9f308766-0ac6-4124-8ffd-1669ef1d4536",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Hello\")"
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2024ffc5-a972-452a-bb3c-49ced957953a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Region</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>ASIA (EX. NEAR EAST)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>EASTERN EUROPE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>NORTHERN AFRICA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>American Samoa</td>\n",
+       "      <td>OCEANIA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>WESTERN EUROPE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>222</th>\n",
+       "      <td>West Bank</td>\n",
+       "      <td>NEAR EAST</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>223</th>\n",
+       "      <td>Western Sahara</td>\n",
+       "      <td>NORTHERN AFRICA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>224</th>\n",
+       "      <td>Yemen</td>\n",
+       "      <td>NEAR EAST</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>225</th>\n",
+       "      <td>Zambia</td>\n",
+       "      <td>SUB-SAHARAN AFRICA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>226</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>SUB-SAHARAN AFRICA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>227 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Country                               Region\n",
+       "0       Afghanistan         ASIA (EX. NEAR EAST)         \n",
+       "1           Albania   EASTERN EUROPE                     \n",
+       "2           Algeria   NORTHERN AFRICA                    \n",
+       "3    American Samoa   OCEANIA                            \n",
+       "4           Andorra   WESTERN EUROPE                     \n",
+       "..               ...                                  ...\n",
+       "222       West Bank   NEAR EAST                          \n",
+       "223  Western Sahara   NORTHERN AFRICA                    \n",
+       "224           Yemen   NEAR EAST                          \n",
+       "225          Zambia   SUB-SAHARAN AFRICA                 \n",
+       "226        Zimbabwe   SUB-SAHARAN AFRICA                 \n",
+       "\n",
+       "[227 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv(\"/Users/hubertwojcik/Desktop/Projekty/pandas-playground/datasets/countries of the world.csv\")"
    ]
   }
  ],
