--- a/filtering_and_ordering.ipynb
+++ b/filtering_and_ordering.ipynb
@@ -1838,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 88,
    "id": "a6064fb6-bd34-4e3d-93f8-499ec114184d",
    "metadata": {},
    "outputs": [
@@ -1944,64 +1944,24 @@
        "      <td>1.81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>156</th>\n",
-       "      <td>5</td>\n",
-       "      <td>PAK</td>\n",
-       "      <td>Pakistan</td>\n",
-       "      <td>Islamabad</td>\n",
+       "      <th>16</th>\n",
+       "      <td>8</td>\n",
+       "      <td>BGD</td>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>Dhaka</td>\n",
        "      <td>Asia</td>\n",
-       "      <td>2.358249e+08</td>\n",
-       "      <td>2.271967e+08</td>\n",
-       "      <td>2.109693e+08</td>\n",
-       "      <td>1.944545e+08</td>\n",
-       "      <td>1.543699e+08</td>\n",
-       "      <td>1.154141e+08</td>\n",
-       "      <td>80624057.0</td>\n",
-       "      <td>59290872.0</td>\n",
-       "      <td>881912.0</td>\n",
-       "      <td>267.4018</td>\n",
-       "      <td>1.0191</td>\n",
-       "      <td>2.96</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>93</th>\n",
-       "      <td>4</td>\n",
-       "      <td>IDN</td>\n",
-       "      <td>Indonesia</td>\n",
-       "      <td>Jakarta</td>\n",
-       "      <td>Asia</td>\n",
-       "      <td>2.755013e+08</td>\n",
-       "      <td>2.718580e+08</td>\n",
-       "      <td>2.590920e+08</td>\n",
-       "      <td>2.440162e+08</td>\n",
-       "      <td>2.140724e+08</td>\n",
-       "      <td>1.821599e+08</td>\n",
-       "      <td>148177096.0</td>\n",
-       "      <td>115228394.0</td>\n",
-       "      <td>1904569.0</td>\n",
-       "      <td>144.6529</td>\n",
-       "      <td>1.0064</td>\n",
-       "      <td>3.45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>2</td>\n",
-       "      <td>IND</td>\n",
-       "      <td>India</td>\n",
-       "      <td>New Delhi</td>\n",
-       "      <td>Asia</td>\n",
-       "      <td>1.417173e+09</td>\n",
-       "      <td>1.396387e+09</td>\n",
-       "      <td>1.322867e+09</td>\n",
-       "      <td>1.240614e+09</td>\n",
-       "      <td>1.059634e+09</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>557501301.0</td>\n",
-       "      <td>3287590.0</td>\n",
-       "      <td>431.0675</td>\n",
-       "      <td>1.0068</td>\n",
-       "      <td>17.77</td>\n",
+       "      <td>1.711864e+08</td>\n",
+       "      <td>1.674210e+08</td>\n",
+       "      <td>1.578300e+08</td>\n",
+       "      <td>1.483911e+08</td>\n",
+       "      <td>1.291933e+08</td>\n",
+       "      <td>1.071477e+08</td>\n",
+       "      <td>83929765.0</td>\n",
+       "      <td>67541860.0</td>\n",
+       "      <td>147570.0</td>\n",
+       "      <td>1160.0350</td>\n",
+       "      <td>1.0108</td>\n",
+       "      <td>2.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>41</th>\n",
@@ -2024,24 +1984,64 @@
        "      <td>17.88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>8</td>\n",
-       "      <td>BGD</td>\n",
-       "      <td>Bangladesh</td>\n",
-       "      <td>Dhaka</td>\n",
+       "      <th>92</th>\n",
+       "      <td>2</td>\n",
+       "      <td>IND</td>\n",
+       "      <td>India</td>\n",
+       "      <td>New Delhi</td>\n",
        "      <td>Asia</td>\n",
-       "      <td>1.711864e+08</td>\n",
-       "      <td>1.674210e+08</td>\n",
-       "      <td>1.578300e+08</td>\n",
-       "      <td>1.483911e+08</td>\n",
-       "      <td>1.291933e+08</td>\n",
-       "      <td>1.071477e+08</td>\n",
-       "      <td>83929765.0</td>\n",
-       "      <td>67541860.0</td>\n",
-       "      <td>147570.0</td>\n",
-       "      <td>1160.0350</td>\n",
-       "      <td>1.0108</td>\n",
-       "      <td>2.15</td>\n",
+       "      <td>1.417173e+09</td>\n",
+       "      <td>1.396387e+09</td>\n",
+       "      <td>1.322867e+09</td>\n",
+       "      <td>1.240614e+09</td>\n",
+       "      <td>1.059634e+09</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>557501301.0</td>\n",
+       "      <td>3287590.0</td>\n",
+       "      <td>431.0675</td>\n",
+       "      <td>1.0068</td>\n",
+       "      <td>17.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>4</td>\n",
+       "      <td>IDN</td>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>Jakarta</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>2.755013e+08</td>\n",
+       "      <td>2.718580e+08</td>\n",
+       "      <td>2.590920e+08</td>\n",
+       "      <td>2.440162e+08</td>\n",
+       "      <td>2.140724e+08</td>\n",
+       "      <td>1.821599e+08</td>\n",
+       "      <td>148177096.0</td>\n",
+       "      <td>115228394.0</td>\n",
+       "      <td>1904569.0</td>\n",
+       "      <td>144.6529</td>\n",
+       "      <td>1.0064</td>\n",
+       "      <td>3.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>156</th>\n",
+       "      <td>5</td>\n",
+       "      <td>PAK</td>\n",
+       "      <td>Pakistan</td>\n",
+       "      <td>Islamabad</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>2.358249e+08</td>\n",
+       "      <td>2.271967e+08</td>\n",
+       "      <td>2.109693e+08</td>\n",
+       "      <td>1.944545e+08</td>\n",
+       "      <td>1.543699e+08</td>\n",
+       "      <td>1.154141e+08</td>\n",
+       "      <td>80624057.0</td>\n",
+       "      <td>59290872.0</td>\n",
+       "      <td>881912.0</td>\n",
+       "      <td>267.4018</td>\n",
+       "      <td>1.0191</td>\n",
+       "      <td>2.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>149</th>\n",
@@ -2072,54 +2072,54 @@
        "27      7  BRA         Brazil          Brasilia  South America   \n",
        "221     3  USA  United States  Washington, D.C.  North America   \n",
        "171     9  RUS         Russia            Moscow         Europe   \n",
-       "156     5  PAK       Pakistan         Islamabad           Asia   \n",
-       "93      4  IDN      Indonesia           Jakarta           Asia   \n",
-       "92      2  IND          India         New Delhi           Asia   \n",
-       "41      1  CHN          China           Beijing           Asia   \n",
        "16      8  BGD     Bangladesh             Dhaka           Asia   \n",
+       "41      1  CHN          China           Beijing           Asia   \n",
+       "92      2  IND          India         New Delhi           Asia   \n",
+       "93      4  IDN      Indonesia           Jakarta           Asia   \n",
+       "156     5  PAK       Pakistan         Islamabad           Asia   \n",
        "149     6  NGA        Nigeria             Abuja         Africa   \n",
        "\n",
        "     2022 Population  2020 Population  2015 Population  2010 Population  \\\n",
        "27      2.153135e+08     2.131963e+08     2.051882e+08     1.963535e+08   \n",
        "221     3.382899e+08     3.359420e+08     3.246078e+08     3.111828e+08   \n",
        "171     1.447133e+08     1.456173e+08     1.446684e+08     1.432426e+08   \n",
-       "156     2.358249e+08     2.271967e+08     2.109693e+08     1.944545e+08   \n",
-       "93      2.755013e+08     2.718580e+08     2.590920e+08     2.440162e+08   \n",
-       "92      1.417173e+09     1.396387e+09     1.322867e+09     1.240614e+09   \n",
-       "41      1.425887e+09     1.424930e+09     1.393715e+09     1.348191e+09   \n",
        "16      1.711864e+08     1.674210e+08     1.578300e+08     1.483911e+08   \n",
+       "41      1.425887e+09     1.424930e+09     1.393715e+09     1.348191e+09   \n",
+       "92      1.417173e+09     1.396387e+09     1.322867e+09     1.240614e+09   \n",
+       "93      2.755013e+08     2.718580e+08     2.590920e+08     2.440162e+08   \n",
+       "156     2.358249e+08     2.271967e+08     2.109693e+08     1.944545e+08   \n",
        "149     2.185412e+08     2.083274e+08     1.839958e+08     1.609529e+08   \n",
        "\n",
        "     2000 Population  1990 Population  1980 Population  1970 Population  \\\n",
        "27      1.758737e+08     1.507064e+08      122288383.0       96369875.0   \n",
        "221     2.823986e+08     2.480837e+08      223140018.0      200328340.0   \n",
        "171     1.468448e+08     1.480057e+08      138257420.0      130093010.0   \n",
-       "156     1.543699e+08     1.154141e+08       80624057.0       59290872.0   \n",
-       "93      2.140724e+08     1.821599e+08      148177096.0      115228394.0   \n",
-       "92      1.059634e+09              NaN              NaN      557501301.0   \n",
-       "41      1.264099e+09     1.153704e+09      982372466.0      822534450.0   \n",
        "16      1.291933e+08     1.071477e+08       83929765.0       67541860.0   \n",
+       "41      1.264099e+09     1.153704e+09      982372466.0      822534450.0   \n",
+       "92      1.059634e+09              NaN              NaN      557501301.0   \n",
+       "93      2.140724e+08     1.821599e+08      148177096.0      115228394.0   \n",
+       "156     1.543699e+08     1.154141e+08       80624057.0       59290872.0   \n",
        "149     1.228520e+08     9.521426e+07       72951439.0       55569264.0   \n",
        "\n",
        "     Area (km²)  Density (per km²)  Growth Rate  World Population Percentage  \n",
        "27    8515767.0            25.2841       1.0046                         2.70  \n",
        "221   9372610.0            36.0935       1.0038                         4.24  \n",
        "171  17098242.0             8.4636       0.9973                         1.81  \n",
-       "156    881912.0           267.4018       1.0191                         2.96  \n",
-       "93    1904569.0           144.6529       1.0064                         3.45  \n",
-       "92    3287590.0           431.0675       1.0068                        17.77  \n",
-       "41    9706961.0           146.8933       1.0000                        17.88  \n",
        "16     147570.0          1160.0350       1.0108                         2.15  \n",
+       "41    9706961.0           146.8933       1.0000                        17.88  \n",
+       "92    3287590.0           431.0675       1.0068                        17.77  \n",
+       "93    1904569.0           144.6529       1.0064                         3.45  \n",
+       "156    881912.0           267.4018       1.0191                         2.96  \n",
        "149    923768.0           236.5759       1.0241                         2.74  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['Rank'] < 10 ].sort_values(by=['Continent','Country'],ascending=False)"
+    "df[df['Rank'] < 10 ].sort_values(by=['Continent','Country'],ascending=[False, True])"
    ]
   }
  ],
